--- a/ShopGo/LoginScreen/Login:SignupScreenStoryBoard.storyboard
+++ b/ShopGo/LoginScreen/Login:SignupScreenStoryBoard.storyboard
@@ -16,33 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akm-jQ-JbE">
-                                <rect key="frame" x="61" y="718" width="270" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray">
-                                    <backgroundConfiguration key="background" cornerRadius="22" strokeWidth="2">
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <color key="strokeColor" red="0.23921570180000001" green="0.26274511220000002" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    </backgroundConfiguration>
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="Log in">
-                                            <attributes>
-                                                <font key="NSFont" size="27" name="Helvetica"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                    <color key="baseForegroundColor" red="0.23921570180000001" green="0.26666668059999998" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                    <color key="baseBackgroundColor" red="0.23921570180000001" green="0.26666668059999998" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="loginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Lq9-1R-XnT"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6i-Ue-ztM">
-                                <rect key="frame" x="61" y="627" width="270" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b6i-Ue-ztM">
+                                <rect key="frame" x="61" y="648" width="270" height="45"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled">
                                     <backgroundConfiguration key="background" cornerRadius="22"/>
@@ -55,21 +30,68 @@
                                             </attributes>
                                         </fragment>
                                     </attributedString>
-                                    <color key="baseBackgroundColor" red="0.23921570180000001" green="0.26274511220000002" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="baseBackgroundColor" red="0.24313727020000001" green="0.27843138579999999" blue="0.61568629740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="createAccountButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="gge-eG-me4"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="bqL-fH-50a">
-                                <rect key="frame" x="8" y="106" width="377" height="479"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="cart" translatesAutoresizingMaskIntoConstraints="NO" id="bqL-fH-50a">
+                                <rect key="frame" x="8" y="80" width="377" height="500"/>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2V-Z6-J7R">
+                                <rect key="frame" x="61" y="729" width="272" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akm-jQ-JbE">
+                                        <rect key="frame" x="1" y="3" width="270" height="45"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="gray">
+                                            <backgroundConfiguration key="background" cornerRadius="22" strokeWidth="0.0">
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </backgroundConfiguration>
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Log in">
+                                                    <attributes>
+                                                        <font key="NSFont" size="27" name="Helvetica"/>
+                                                        <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                            <color key="baseForegroundColor" red="0.23921570180000001" green="0.26666668059999998" blue="0.63921570780000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <color key="baseBackgroundColor" red="0.24313727020000001" green="0.27843138579999999" blue="0.61568629740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="loginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Lq9-1R-XnT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.29803922770000002" green="0.32941177490000001" blue="0.70980393890000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="7ox-vt-jna"/>
+                                    <constraint firstAttribute="width" constant="272" id="CKb-nk-Saq"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="F2V-Z6-J7R" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="0hA-Tu-SEK"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="F2V-Z6-J7R" secondAttribute="bottom" constant="39" id="1ai-w3-po6"/>
+                            <constraint firstItem="b6i-Ue-ztM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="61" id="3x3-5b-b0h"/>
+                            <constraint firstItem="F2V-Z6-J7R" firstAttribute="centerX" secondItem="bqL-fH-50a" secondAttribute="centerX" id="5by-G9-vx4"/>
+                            <constraint firstItem="F2V-Z6-J7R" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="topMargin" constant="670" id="5ka-Vh-wxd"/>
+                            <constraint firstItem="bqL-fH-50a" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="8" id="6QK-20-A7j"/>
+                            <constraint firstItem="b6i-Ue-ztM" firstAttribute="top" secondItem="bqL-fH-50a" secondAttribute="bottom" constant="42" id="HcU-B6-d4F"/>
+                            <constraint firstItem="b6i-Ue-ztM" firstAttribute="centerX" secondItem="bqL-fH-50a" secondAttribute="centerX" id="LjT-9y-fGi"/>
+                            <constraint firstItem="F2V-Z6-J7R" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="MBM-0Q-kyp"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bqL-fH-50a" secondAttribute="trailing" constant="8" id="V9L-3U-4HU"/>
+                            <constraint firstItem="bqL-fH-50a" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="47" id="tEt-EA-1sU"/>
+                            <constraint firstItem="F2V-Z6-J7R" firstAttribute="leading" secondItem="b6i-Ue-ztM" secondAttribute="leading" id="xd5-IS-V3P"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="buttonView" destination="F2V-Z6-J7R" id="TNM-AB-mfB"/>
                         <outlet property="createAccountOutlet" destination="b6i-Ue-ztM" id="tuL-0Q-u68"/>
                         <outlet property="loginOutlet" destination="akm-jQ-JbE" id="F3H-j0-SAq"/>
                         <outlet property="shopGoImage" destination="bqL-fH-50a" id="6Y6-mq-6n3"/>
