--- a/ShopGo/Create Account/CreateAccount.storyboard
+++ b/ShopGo/Create Account/CreateAccount.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,11 +13,11 @@
             <objects>
                 <viewController storyboardIdentifier="CreateAccountViewController" id="Y6W-OH-hqX" customClass="CreateAccountViewController" customModule="ShopGo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qi-HW-y0h">
-                                <rect key="frame" x="0.0" y="59" width="393" height="45.666666666666657"/>
+                                <rect key="frame" x="0.0" y="59" width="430" height="45.666666666666657"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45.666666666666657" id="hQ7-6K-1u8"/>
                                 </constraints>
@@ -26,10 +26,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Uj-cv-Veh">
-                                <rect key="frame" x="0.0" y="104.66666666666669" width="393" height="747.33333333333326"/>
+                                <rect key="frame" x="0.0" y="104.66666666666669" width="430" height="827.33333333333326"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GWD-sL-gpB">
-                                        <rect key="frame" x="36" y="387.66666666666663" width="321" height="68"/>
+                                        <rect key="frame" x="36" y="387.66666666666663" width="358" height="68"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5OI-OE-gA9">
                                                 <rect key="frame" x="8" y="21.000000000000057" width="37" height="26"/>
@@ -62,7 +62,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uet-O6-ocR">
-                                        <rect key="frame" x="36" y="352" width="321" height="21.666666666666686"/>
+                                        <rect key="frame" x="36" y="352" width="358" height="21.666666666666686"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21.670000000000002" id="AB4-6I-8OY"/>
                                         </constraints>
@@ -71,10 +71,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hFA-qi-aKH">
-                                        <rect key="frame" x="36" y="290" width="321" height="49"/>
+                                        <rect key="frame" x="36" y="290" width="358" height="49"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone number" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mmF-gO-TnL">
-                                                <rect key="frame" x="89" y="13" width="232" height="26"/>
+                                                <rect key="frame" x="89" y="13" width="269" height="26"/>
                                                 <color key="textColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="phonePad" textContentType="tel"/>
@@ -100,7 +100,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MOr-Kt-3qF">
-                                        <rect key="frame" x="36" y="255" width="321" height="21"/>
+                                        <rect key="frame" x="36" y="255" width="358" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="3Dx-J6-7Wg"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="HGB-De-nCf"/>
@@ -110,7 +110,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BfQ-tR-CMV">
-                                        <rect key="frame" x="36" y="191" width="321" height="49"/>
+                                        <rect key="frame" x="36" y="191" width="358" height="49"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="envelope" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="xKN-FW-SFD">
                                                 <rect key="frame" x="8" y="11.333333333333334" width="37" height="26"/>
@@ -121,7 +121,7 @@
                                                 </constraints>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B98-u3-j7B">
-                                                <rect key="frame" x="108" y="13" width="213" height="24"/>
+                                                <rect key="frame" x="108" y="13" width="250" height="24"/>
                                                 <color key="textColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="email"/>
@@ -139,7 +139,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AXP-Cz-8DB">
-                                        <rect key="frame" x="36" y="157" width="321" height="21"/>
+                                        <rect key="frame" x="36" y="157" width="358" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="xE2-5v-xlQ"/>
                                             <constraint firstAttribute="height" constant="21" id="xj0-uD-hhY"/>
@@ -149,10 +149,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tDL-V9-XOT">
-                                        <rect key="frame" x="36" y="87.999999999999986" width="321" height="54.000000000000014"/>
+                                        <rect key="frame" x="36" y="87.999999999999986" width="358" height="54.000000000000014"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ARt-uR-cMX">
-                                                <rect key="frame" x="106" y="16" width="207" height="29"/>
+                                                <rect key="frame" x="106" y="16" width="244" height="29"/>
                                                 <color key="textColor" red="0.66274509800000003" green="0.66274509800000003" blue="0.66274509800000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="name"/>
@@ -178,13 +178,13 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHS-sf-Tfv">
-                                        <rect key="frame" x="36" y="49.999999999999986" width="321" height="24"/>
+                                        <rect key="frame" x="36" y="49.999999999999986" width="358" height="24"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Do-pM-fcC">
-                                        <rect key="frame" x="0.0" y="624" width="393" height="73.333333333333371"/>
+                                        <rect key="frame" x="0.0" y="624" width="430" height="153.33333333333337"/>
                                         <color key="tintColor" red="0.23921568627450979" green="0.26666666666666666" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
                                         <buttonConfiguration key="configuration" style="plain" subtitle="Log in" titlePadding="4" titleAlignment="center">
                                             <attributedString key="attributedTitle">
@@ -202,12 +202,13 @@
                                             <action selector="loginButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="eEa-t9-zOw"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSz-ZO-fqJ">
-                                        <rect key="frame" x="36" y="502" width="321" height="55"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZSz-ZO-fqJ" customClass="CustomButton" customModule="ShopGo" customModuleProvider="target">
+                                        <rect key="frame" x="36" y="502" width="358" height="55"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="55" id="OJi-Br-Mxh"/>
                                         </constraints>
                                         <color key="tintColor" red="0.23921568630000001" green="0.2666666667" blue="0.6470588235294118" alpha="1" colorSpace="calibratedRGB"/>
+                                        <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="1"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="filled" title="Next" cornerStyle="capsule">
                                             <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="32"/>
