delete extension and create a new class for login inner button

--- a/ShopGo/LoginScreen/LoginSignupStoryboard.storyboard
+++ b/ShopGo/LoginScreen/LoginSignupStoryboard.storyboard
@@ -36,7 +36,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F2V-Z6-J7R" customClass="CustomButtonView" customModule="ShopGo" customModuleProvider="target">
                                 <rect key="frame" x="80" y="680" width="270" height="45"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akm-jQ-JbE">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="akm-jQ-JbE" customClass="CustomLoginInnerButton" customModule="ShopGo" customModuleProvider="target">
                                         <rect key="frame" x="1" y="3" width="268" height="39"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
