--- a/ShopGo/Main/Base.lproj/Main.storyboard
+++ b/ShopGo/Main/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1634" y="-12"/>
+            <point key="canvasLocation" x="2559.5419847328244" y="-12.67605633802817"/>
         </scene>
     </scenes>
     <resources>
