revised create account screen

--- a/ShopGo/CreateAccount/CreateAccount.storyboard
+++ b/ShopGo/CreateAccount/CreateAccount.storyboard
@@ -66,7 +66,7 @@
                                             <constraint firstAttribute="height" constant="45" id="8B8-EC-8XL"/>
                                             <constraint firstAttribute="width" constant="270" id="ggu-Vq-Cxr"/>
                                         </constraints>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" red="0.52941179279999995" green="0.52941179279999995" blue="0.52941179279999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="name"/>
                                     </textField>
